[project]
name = "querypipz"
version = "0.1.6"
description = "提供构建与使用知识库的能力"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "black>=25.1.0", "llama-index[all]>=0.12.31", "llama-index-readers-file>=0.4.7", "llama-index-readers-github>=0.6.1", "toolsz>=0.1.4", "llama-index-core>=0.12.31", "llama-index-readers-database>=0.4.0", "pypdf2>=3.0.1", "toml>=0.10.2",]

[tool.uv.workspace]
members = [ "~/GitHub/commender", "audioz",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
