[project]
name = "querypipz"
version = "0.1.19"
description = "提供使用llama-index的适配器接口"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "llama-index[all]>=0.12.31", "llama-index-readers-file>=0.4.7", "llama-index-readers-github>=0.6.1", "llama-index-core>=0.12.31", "llama-index-readers-database>=0.4.0", "llama-index-vector-stores-faiss>=0.4.0", "llama-index-graph-stores-neo4j>=0.4.6", "llama-index-graph-stores-memgraph>=0.3.1", "llama-index-graph-stores-nebula>=0.4.2", "llama-index-vector-stores-pinecone>=0.4.5", "pinecone>=6.0.2", "redis>=6.2.0", "pypdf2>=3.0.1", "promptlibz==0.2.10", "toolsz>=0.1.4", "toml==0.10.2",]

[tool.uv.workspace]
members = [ "~/GitHub/commender", "audioz",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
